# openai-agents-redis-example

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
guidelines/: cyclic_workflows.md
src/agent/: context.py
src/agent/intent/: __init__.py  context.py  hooks.py  instructions.py  intent_agent.py
src/agent/scheduler/: context.py  instructions.py  scheduler_agent.py  tools.py
src/cli/: controller.py  entrypoint.py
src/model/: ollama.py  openai.py
